added a button for instructions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<title>shortest path</title>
 	<style>
 		@font-face {
@@ -83,11 +84,13 @@
 		<ul>
 			<li class="startbtn">Start</li>
 			<li class="resetbtn">Reset</li>
+			<li class="instructions">Instructions</li>
 		</ul>
 	</div>
 	<div class="container"></div>
 	<p>Shortest Path Algorithm visualizer by <a href="https://www.linkedin.com/in/vardhman-jain-881b4b179">Vardhman Jain</a>
 	<script type="text/javascript" src="howler.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
