--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		.isDisabled{
 			cursor: not-allowed;
   			opacity: 0.5;
+  			pointer-events: none;
 		}
 		.isDisabledClear{
 			cursor : not-allowed;
